--- a/Stambul_DB/Stambul_DB.csproj
+++ b/Stambul_DB/Stambul_DB.csproj
@@ -183,5 +183,9 @@
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Res\Icons\" />
+    <Folder Include="Res\Maps\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
