--- a/Stambul_DB/App.config
+++ b/Stambul_DB/App.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-	<startup>
-		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
-	</startup>
-	<connectionStrings>
-		<add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=mobiledb;Integrated Security=True" providerName="System.Data.SqlClient" />
-	<add name="Istanbul_urban_dbEntities" connectionString="metadata=res://*/StambulDB.csdl|res://*/StambulDB.ssdl|res://*/StambulDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=WIN-9F1Q71A6B4P;initial catalog=Istanbul_urban_db;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
+  </startup>
+  <connectionStrings>
+    <add name="Istanbul_urban_dbEntities" connectionString="metadata=res://*/db.IstanbulDB.csdl|res://*/db.IstanbulDB.ssdl|res://*/db.IstanbulDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=WIN-9F1Q71A6B4P;initial catalog=Istanbul_urban_db;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
