--- a/Stambul_DB/Stambul_DB.csproj
+++ b/Stambul_DB/Stambul_DB.csproj
@@ -77,7 +77,7 @@
     <Compile Include="db\Master_Plans.cs">
       <DependentUpon>Stambul_DB.tt</DependentUpon>
     </Compile>
-    <Compile Include="db\Satelitte_Maps.cs">
+    <Compile Include="db\Pervetitich_Maps.cs">
       <DependentUpon>Stambul_DB.tt</DependentUpon>
     </Compile>
     <Compile Include="db\Photos.cs">
@@ -96,12 +96,6 @@
       <DependentUpon>Stambul_DB.tt</DependentUpon>
     </Compile>
     <Compile Include="db\Special_Maps.cs">
-      <DependentUpon>Stambul_DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="db\sp_helpdiagramdefinition_Result.cs">
-      <DependentUpon>Stambul_DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="db\sp_helpdiagrams_Result.cs">
       <DependentUpon>Stambul_DB.tt</DependentUpon>
     </Compile>
     <Compile Include="db\Stambul_DB.Context.cs">
@@ -215,6 +209,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Pages\Transportation.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Pages\SatelitteMaps.xaml.cs">
@@ -225,6 +223,9 @@
     </Compile>
     <Compile Include="Pages\SpecialMaps.xaml.cs">
       <DependentUpon>SpecialMaps.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\Transportation.xaml.cs">
+      <DependentUpon>Transportation.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
@@ -266,16 +267,6 @@
     <Folder Include="Res\Maps\" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="db\Stambul_DB.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>Stambul_DB.edmx</DependentUpon>
-      <LastGenOutput>Stambul_DB.Context.cs</LastGenOutput>
-    </Content>
-    <Content Include="db\Stambul_DB.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>Stambul_DB.edmx</DependentUpon>
-      <LastGenOutput>Stambul_DB.cs</LastGenOutput>
-    </Content>
     <Resource Include="Pages\1930_CG.JPG" />
     <Resource Include="Pages\1920-1994_CG.jpg" />
     <Resource Include="Pages\2_MP.jpg" />
@@ -313,6 +304,18 @@
     <Resource Include="Pages\1815_CM.jpg" />
     <Resource Include="User.png" />
     <Resource Include="Res\Icons\User.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="db\Stambul_DB.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Stambul_DB.edmx</DependentUpon>
+      <LastGenOutput>Stambul_DB.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="db\Stambul_DB.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Stambul_DB.edmx</DependentUpon>
+      <LastGenOutput>Stambul_DB.cs</LastGenOutput>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
