--- a/Stambul_DB/App.config
+++ b/Stambul_DB/App.config
@@ -3,4 +3,4 @@
 	<startup>
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
 	</startup>
-<connectionStrings><add name="Istanbul_urban_dbEntities" connectionString="metadata=res://*/db.Stambul_DB.csdl|res://*/db.Stambul_DB.ssdl|res://*/db.Stambul_DB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=WIN-9F1Q71A6B4P;initial catalog=Istanbul_urban_db;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+<connectionStrings><add name="Istanbul_urban_dbEntities" connectionString="metadata=res://*/db.Stambul_DB.csdl|res://*/db.Stambul_DB.ssdl|res://*/db.Stambul_DB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-PLCQUNS;initial catalog=Istanbul_urban_db;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
